Added screenshot to README.md

--- a/package.json
+++ b/package.json
@@ -56,23 +56,20 @@
       "!**/node_modules/**"
     ]
   },
-
-
-
   "babel": {
-      "env": {
-          "test": {
-              "presets": [
-                  ["env", { "targets": { "node": "current" }}]
-              ]
-          }
+    "env": {
+      "test": {
+        "presets": [
+          [
+            "env",
+            {
+              "targets": {
+                "node": "current"
+              }
+            }
+          ]
+        ]
       }
+    }
   }
-
-
-
-
-
-
-
 }
